--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Title: Snow crab assessment suite for em* and associated projects.
 Version: 0.1
 Authors@R: c(
   person("Jae", "Choi", email = "choijaeseok@gmail.com", role = c("aut", "cre")),
-  person("Michelle", "Greenlaw", email = "Michelle.Greenlaw@dfo-mpo.gc.ca", role = c("aut")),
-  person("Brad", "Hubley", email = "Brad.Hubley@dfo-mpo.gc.ca", role = c("aut")),
   person("Brent", "Cameron", email = "Brent.Cameron@dfo-mpo.gc.ca", role = c("aut")),
-  person("Ben", "Zisserson", email = "Ben.Zisserson@dfo-mpo.g.ca", role = c("aut")),
-  person("Adam", "Cook", email = "Adam.Cook@dfo-mpo.gc.ca", role = c("aut")) ) 
+  person("Brad", "Hubley", email = "Brad.Hubley@dfo-mpo.gc.ca", role = c("aut")),
+  person("Michelle", "Greenlaw", email = "Michelle.Greenlaw@dfo-mpo.gc.ca", role = c("aut")),
+  person("Adam", "Cook", email = "Adam.Cook@dfo-mpo.gc.ca", role = c("aut,")) ) 
+  person("Ben", "Zisserson", email = "Ben.Zisserson@dfo-mpo.g.ca", role = c("aut"))
 Description: The snow crab assessment suite used by Maritimes Region in Canada. It is  
   designed to be used as part of the em* project. 
 Depends: R (>= 3.0.0)
@@ -19,19 +19,11 @@ Imports:
   DBI, 
   devtools,
   fields, 
-  gstat, 
-  geosphere, 
   grid,
-  Hmisc, 
-  lattice, 
   lubridate,
-  maptools,  
-  maps,
-  mapdata,
+  lattice, 
   mgcv, 
   parallel, 
-  RColorBrewer, 
-  rasterVis, 
   rgdal, 
   rgeos, 
   ROracle,
@@ -41,7 +33,7 @@ Imports:
   aegis, 
   netmensuration,
   stmv
-Suggests:
+Suggests:  gstat, geosphere, maptools, maps, mapdata, Hmisc, RColorBrewer 
 License: MIT
 LazyData: true
 URL: https://github.com/jae0/bio.snowcrab/
