--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,9 @@ Authors@R: c(
 Description: The snow crab assessment suite used by Maritimes Region in Canada. It is
   designed to be used as part of the bio.* and aegis.* projects.
 Depends: R (>= 3.0.0)
-Imports: akima, bigmemory, boot, Cairo, DBI, devtools, fields, grid,
+Imports: aegis
+Suggests: netmensuration, stmv, akima, bigmemory, boot, Cairo, DBI, devtools, fields, grid,
   lubridate, lattice, mgcv, parallel, rgdal, rgeos, ROracle, sp, vegan, maptools, maps, mapdata, Hmisc, RColorBrewer
-Suggests: aegis, netmensuration, stmv,
 License: MIT
 LazyData: true
 URL: https://github.com/jae0/bio.snowcrab
