--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
   person("Michelle", "Greenlaw", email = "Michelle.Greenlaw@dfo-mpo.gc.ca", role = c("aut")) )
 Description: The snow crab assessment suite used by Maritimes Region in Canada. It is
   designed to be used as part of the bio.* and aegis.* projects.
-Depends: R (>= 3.0.0)
+Depends: R (>= 3.0.0), data.table
 Imports: aegis
 Suggests: netmensuration, stmv, akima, bigmemory, boot, Cairo, DBI, devtools, fields, grid,
   lubridate, lattice, mgcv, parallel, rgdal, rgeos, ROracle, sp, vegan, maptools, maps, mapdata, Hmisc, RColorBrewer
