alter makefile to bemore autonomous/flexible

--- a/inst/markdown/Makefile
+++ b/inst/markdown/Makefile
@@ -1,10 +1,12 @@
 YR?=2023
-mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))  # loc of this Makefile
-WK?=~/bio.data/bio.snowcrab/reports
-MEDIA?=$(WK)/media
-FN?=FN_none
 SOURCE?=~/bio/bio.snowcrab/inst/markdown
-DDE?=/home/jae/bio.data/bio.snowcrab/fishery_model/2023/size_structured_dde_normalized
+MEDIA?=$(SOURCE)/media
+DATADIR?=~/bio.data/bio.snowcrab
+WK?=$(DATADIR)/reports
+DDE?=$(DATADIR)/fishery_model/2023/size_structured_dde_normalized
+mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)) )
+FN?=FN_none
+# warning: variables names include terminal spaces ..
 
 # If the first argument is "run"...
 ifeq (run,$(firstword $(MAKECMDGOALS)))
@@ -13,8 +15,10 @@ ifeq (run,$(firstword $(MAKECMDGOALS)))
   # ...and turn them into do-nothing targets
   $(eval $(RUN_ARGS):;@:)
 endif
-
+ 
 # export BSTINPUTS=.:media//:
+# rmarkdown and rmarkdown docs needs to be copied to elsewhere, and media for csl's etc
+
 
 # declare non-file targets:
 .PHONY: dummy run all install clean cleanall distclean TAGS info check watch
@@ -24,64 +28,79 @@ endif
 dummy :
 	@echo need to pass parameters to make
 
-copy:
-	cp $(SOURCE)/Makefile $(WK)/
-	cp -rf $(SOURCE)/*.md $(WK)/	
-	cp -rf $(SOURCE)/*.qmd $(WK)/	
-	cp -rf $(SOURCE)/*.rmd $(WK)/	
-	@echo file have been copied to $(WK). Change to that directory and continue with reports;
-
+ 
 run : 
 	@echo prog $(RUN_ARGS)
 
 clean :
+	cd $(WK)
 	rm -rf *.log *.docx *.odt *.epub *.html 
 
 cleanall :
+	cd $(WK)
 	rm -rf *.aux *.bbl *.bcf *.blg *.log *.out *.run.xml *.spl  *.docx *.odt *.epub *.html *.pdf
 
-all : snowcrab_presentation_general_summary snowcrab_working_paper snowcrab_sar feeding_networks_report 02.tables 51_bycatch
+all : snowcrab_presentation_general_summary snowcrab_presentation_assessment snowcrab_working_paper snowcrab_sar feeding_networks_report 02.tables 51_bycatch
 
-snowcrab_presentation_general_summary : 
-	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)'  ), output_dir='$(WK)' ) "
-	zathura $@.pdf
+snowcrab_presentation_general_summary :
+	ln -sf $(SOURCE)/media $(WK)/media
+	cp $(SOURCE)/$@.rmd $(WK)/	
+	@echo $(WK)/$@.pdf
+	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)' ), output_dir='$(WK)' ) " && zathura $(WK)/$@.pdf &
 
-snowcrab_presentation_assessment : 
-	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)'  ), output_dir='$(WK)' ) "
-	zathura $@.pdf
+snowcrab_presentation_assessment :
+	ln -sf $(SOURCE)/media $(WK)/media
+	cp $(SOURCE)/$@.rmd $(WK)/	
+	@echo $(WK)/$@.pdf
+	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)'  ), output_dir='$(WK)' ) " && zathura $(WK)/$@.pdf &
 
-snowcrab_working_paper : 
-	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)'  ), output_dir='$(WK)' ) "
-	zathura $@.pdf
+snowcrab_working_paper :
+	ln -sf $(SOURCE)/media $(WK)/media
+	cp $(SOURCE)/$@.rmd $(WK)/	
+	@echo $(WK)/$@.pdf
+	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)'  ), output_dir='$(WK)' ) " && zathura $(WK)/$@.pdf &
 
 snowcrab_sar :
-	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)'  ), output_dir='$(WK)' ) "
-	# zathura $@.pdf
-	libreoffice $@.docx
+	ln -sf $(SOURCE)/media $(WK)/media
+	cp $(SOURCE)/$@.rmd $(WK)/	
+	@echo $(WK)/$@.docx
+	Rscript -e "rmarkdown::render('$(WK)/$@.rmd', params=list( year.assessment=$(YR), media_loc='$(MEDIA)', debugging=FALSE , loc_dde='$(DDE)'  ), output_dir='$(WK)' ) " &&  libreoffice $(WK)/$@.docx  &
 
 feeding_networks_report :
-	quarto render feeding_networks_report.qmd --to html
-	firefox feeding_networks_report.html
+	ln -sf $(SOURCE)/media $(WK)/media
+	cp $(SOURCE)/$@.qmd $(WK)/	
+	cd $(WK)
+	@echo $(WK)/$@.html
+	quarto render $@.qmd --to html && firefox $(WK)/$@.html  &
 
 
 51_bycatch :
-	quarto render 51_bycatch.qmd --to html
-	firefox 51_bycatch.html
+	ln -sf $(SOURCE)/media $(WK)/media
+	cd $(WK)
+	@echo $(WK)/$@.html
+	quarto render $@.qmd --to html && firefox $(WK)/$@.html  &
 
 
 02.tables :
-	quarto render 02.tables.qmd --to html
-	firefox 02.tables.html
+	ln -sf $(SOURCE)/media $(WK)/media
+	cd $(WK)
+	@echo $(WK)/$@.html
+	quarto render $@.qmd --to html  && firefox $(WK)/$@.html  &
 
 
-pdf: latex  
+pdf:
 	pdflatex $(FN).tex
 	biber $(FN) 
 	pdflatex $(FN).tex
 	pdflatex $(FN).tex
+	zathura $(FN).pdf &
 
-view: 
-	zathura $(FN).pdf 
+md2latex:
+	pandoc -s $(FN).md \
+	--from=markdown+tex_math_single_backslash+tex_math_dollars+raw_tex \
+	--to=latex --template=$(TEMPLATE) \
+	--output=$(FN).tex 
+	code $(FN).tex &
 
 md2pdf: 
 	pandoc -s $(FN).md \
@@ -90,6 +109,7 @@ md2pdf:
 	--output=$(FN).pdf \
 	--pdf-engine=$(PDFENGINE)
 	pdflatex $(FN).tex
+	zathura $(FN).pdf &
 
 md2html:
 	pandoc $(FN).md \
@@ -98,6 +118,7 @@ md2html:
 	--output=$(FN).html \
 	--mathjax \
 	--self-contained
+	firefox $(FN).html &
 
 md2epub:
 	pandoc $(FN).md \
@@ -106,12 +127,14 @@ md2epub:
 	--output=$(FN).epub \
 	--epub-cover-image=<cover-image> \
 	--toc
+	libreoffice $(FN).epub &
 
 md2docx:
 	pandoc $(FN).md \
 	--from=markdown+tex_math_single_backslash+tex_math_dollars \
 	--to=docx \
 	--output=$(FN).docx \
+	libreoffice $(FN).docx &
 
 
 md2odt:
@@ -119,6 +142,7 @@ md2odt:
 	--from=markdown+tex_math_single_backslash+tex_math_dollars \
 	--to=odt \
 	--output=$(FN).odt \
+	libreoffice $(FN).odt &
 
   
 git:
