--- a/inst/julia/Project.toml
+++ b/inst/julia/Project.toml
@@ -17,6 +17,9 @@ ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
+PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
+PlotlyKaleido = "f2990250-8cf9-495f-b13a-cce12b45703c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 RData = "df47a6cb-8c03-5eed-afd8-b6050d6c41da"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
