--- a/inst/markdown/Makefile
+++ b/inst/markdown/Makefile
@@ -4,7 +4,7 @@ SOURCE := ${PWD}
 # SOURCE := $(abspath $(lastword $(MAKEFILE_LIST)) )
 MEDIA?=$(SOURCE)/media
 DATADIR?=~/bio.data/bio.snowcrab
-WK?=$(DATADIR)/reports
+WK?=$(DATADIR)/assessments/$(YR)
 DDE?=$(DATADIR)/fishery_model/$(YR)/size_structured_dde_normalized
 FN?=FN_none
 METHOD=quarto
