--- a/inst/julia/Project.toml
+++ b/inst/julia/Project.toml
@@ -14,10 +14,10 @@ MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
-OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 RData = "df47a6cb-8c03-5eed-afd8-b6050d6c41da"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
