--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Description: The snow crab assessment suite used by Maritimes Region in Canada. 
 Depends: R (>= 3.0.0), data.table, sf, DBI, RSQLite
 Imports: aegis
 Suggests: netmensuration, stmv, akima, bigmemory, boot, Cairo, DBI, fields, grid,
-  lubridate, lattice, mgcv, parallel,  ROracle, sf, vegan, Hmisc, RColorBrewer
+  lubridate, lattice, mgcv, parallel,  ROracle, sf, vegan, Hmisc, RColorBrewer, MBA, ggplot2, 
+  knitr, spsUtil, gt, terra
 License: MIT
 LazyData: true
 URL: https://github.com/jae0/bio.snowcrab
